# Bayesian_MMM

./: README.md  hello.py  plotting.py  pymc-marketing.ipynb  pymc.py  pyproject.toml
