[project]
name = "bayesian-mmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "plotly>=6.0.1",
    "polars>=1.26.0",
    "prophet>=1.1.6",
    "pyarrow>=19.0.1",
    "pymc-marketing>=0.12.1",
    "statsmodels>=0.14.4",
]
